# ECS122b-Final-Project

./: README.md
format/: AStyle  styleCheck.txt
src/: CMakeLists.txt  LongestCommonSubstr.cpp  LongestCommonSubstrTests.cpp  Makefile  circStrLinearization.cpp  circStrLinearizationSanityTests.cpp  circStrLinearizationTests.cpp  edge.cpp  edge.h  generalizedSuffixTreeTests.cpp  longestCommonSubstr.cpp  longestCommonSubstrSanityTest.cpp  main.cpp  maximalRepeats.cpp  node.h  sanityTests.sh  suffixTree.cpp  suffixTree.h  suffixTreeSanityTest.cpp  suffixTreeTests.cpp
